# MacBERT-EmotionClassifier

./: .gitignore  LICENSE  README.md  gradio_app.py  predict.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
configs/: train_macbert_base.yaml
src/macbert_emotion_classifier/: __init__.py  config.py  constants.py  data.py  metrics.py  predictor.py  trainer.py
